--- a/index.html
+++ b/index.html
@@ -89,10 +89,19 @@
 
             <h4>SOME TECHNOLOGIES I'VE WORKED WITH:</h4>
             <div class="experience-list">
-                <img src="./images/htm5.png" alt="">
+                <img src="./images/laravel5.png" alt="Laravel">
              </div>      
             <div class="experience-list">
-                <img src="./images/css3.png" alt="">
+                <img src="./images/php2.png" alt="PHP">
+             </div>    
+            <div class="experience-list">
+                <img src="./images/js.png" alt="javascript">
+             </div>      
+            <div class="experience-list">
+                <img src="./images/css3.png" alt="CSS3">
+             </div> 
+            <div class="experience-list">
+                <img src="./images/htm5.png " alt="HTML5">
              </div>
         </div>
 
