passion text updated

--- a/index.html
+++ b/index.html
@@ -69,15 +69,31 @@
             <div class="passion-list-container">
                 <div class="passion-list">
                     <div class="passion-title">DESIGN</div>
-                    <p>Design isn't just what a product looks like and feels like on the outside. Design encompasses the internal functionality of a product as well as the overall user experience. I strive to design interfaces and experiences that people can enjoy on all digital mediums.</p>
+                    <p>
+                        Design isn’t just how a product looks—it’s how it works. To me, design is about understanding users, anticipating their needs, and 
+                        creating systems that are both functional and enjoyable to use. It involves mapping out architecture, defining clear workflows, and 
+                        crafting interfaces that feel natural across devices. I aim to design experiences that not only solve problems but also feel 
+                        effortless and engaging.
+                    </p>
                 </div> 
                 <div class="passion-list">
                     <div class="passion-title">DEVELOPMENT</div>
-                    <p>Design isn't just what a product looks like and feels like on the outside. Design encompasses the internal functionality of a product as well as the overall user experience. I strive to design interfaces and experiences that people can enjoy on all digital mediums.</p>
+                    <p>
+                        Development is where vision becomes reality. It’s the process of building robust, scalable systems by writing clean, maintainable
+                         code. I enjoy translating designs into interactive features, architecting backend logic, and ensuring the frontend feels 
+                         responsive and intuitive. Whether working with Laravel, Vue.js, or plain JavaScript, I focus on building software that is both 
+                         powerful and easy to evolve.
+                    </p>
                 </div> 
                 <div class="passion-list">
                     <div class="passion-title">DEPLOYMENT</div>
-                    <p>Design isn't just what a product looks like and feels like on the outside. Design encompasses the internal functionality of a product as well as the overall user experience. I strive to design interfaces and experiences that people can enjoy on all digital mediums.</p>
+                    <p>
+                        Deployment is the final step in the development journey, but it’s just as critical as the others. It’s where all the hard work
+                        becomes real—where users interact with the application in the wild. I treat deployment as a disciplined and strategic process that
+                        ensures stability, performance, and ease of maintenance. My goal is to deliver software that users can trust
+                        , and that I can confidently build on in the future.
+
+                    </p>
                 </div>     
             </div>
         </div>
